chore: sync local workspace changes